fix: Box Containers Alignement

--- a/public/css/album.css
+++ b/public/css/album.css
@@ -1,4 +1,11 @@
 .img-max-height {
-    max-height: 400px; 
+    max-height: 400px;
+    width: 100%; 
     object-fit: cover; 
+}
+
+.img-max-height-r2 {
+    max-height: 400px;
+    width: 100%; 
+    object-fit: cover;
 }
